# faro

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  pages.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/data/cache/: AAPL.parquet  KO.parquet  MSFT.parquet  NVDA.parquet  SPY.parquet  VTI.parquet  VZ.parquet
api/scripts/: grounding_check.py
api/src/faro_api/: __init__.py  config.py  main.py
api/src/faro_api/agent/: __init__.py  anthropic_provider.py  guardrails.py  loop.py  ollama_provider.py  prompts.py  provider.py  tools.py
api/src/faro_api/data/: __init__.py  cache.py  provider.py  stooq_provider.py  yfinance_provider.py
api/src/faro_api/db/: __init__.py  models.py  seed.py  session.py
api/src/faro_api/quant/: __init__.py  portfolio.py  ratios.py  relative.py  returns.py  risk.py
api/src/faro_api/routers/: chat.py  digest.py  portfolios.py
api/src/faro_api/services/: __init__.py  digest_service.py  market_data.py  metrics_service.py  scenario_service.py
api/tests/: test_health.py
api/tests/integration/: test_portfolio_crud.py
api/tests/unit/agent/: test_guardrails.py  test_guardrails_qa.py  test_loop.py  test_prompts.py
api/tests/unit/data/: test_cache.py
api/tests/unit/db/: test_seed.py
api/tests/unit/quant/: conftest.py  test_portfolio.py  test_ratios.py  test_relative.py  test_returns.py  test_risk.py
api/tests/unit/services/: test_consistency.py  test_digest_service.py  test_scenario_service.py
brand/: BRAND.md
docs/: CHANGELOG.md  GROUNDING-CHECK.md  KICKOFF-PROMPT.md  PRD.md  PROJECT-HANDOFF.md  README.md  RECRUITER-BRIEF.md  RESEARCH.md  SUBSTACK-ARTICLE.md  TECH-NOTES.md
docs/archive/cobra/: CLAUDE-cobra.md  KICKOFF-PROMPT.md  PRD.md  RESEARCH.md  TECH-NOTES.md
docs/archive/mi-presupuesto/: ACADEMIC.md  CLAUDE-capstone.md  (+5 more)
docs/eval-logs/: run1-fresh.txt  run3-fresh.txt  run4-docker-fresh.txt  run5-both-modes.txt  run6-nofresh-shipped.txt
docs/legal/: Faro-Investment-Disclaimer.docx  Faro-Privacy-Policy.docx  Faro-Terms-of-Use.docx
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest
web/scripts/: check-i18n.mjs
web/src/: App.tsx  i18n.ts  index.css  languages.ts
website/: CNAME  index.html  robots.txt  sitemap.xml
(+40 files in other folders)
