[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faro-api"
version = "0.1.0"
description = "Faro — AI Portfolio Copilot API: first-principles quant engine + tool-grounded LLM agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "yfinance>=0.2.43",
    "httpx>=0.27",
    "sqlalchemy>=2.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.11",
    "pandas-stubs>=2.2",
    # Independent cross-checks for the quant engine (tests ONLY — the engine
    # itself is pure numpy/pandas by design):
    "quantstats>=0.0.62",
    "scipy>=1.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Greek letters (σ, β, α, Σ, √) are intentional in quant formula docstrings.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["faro_api"]

[[tool.mypy.overrides]]
# yfinance ships no type stubs; its results are cast/validated at the boundary.
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
